assets/theme.css
/* ... */
.template-collection #shopify-section-header {
  margin-bottom: 40px;
}


/* mobile tweaks */

@media screen and (max-width: 1010px) {
.product__payment-container {
  display: flex;
  }
  .section-16034882062fb96698 {
    overflow: hidden;
  }
  .template-page .page__content-wrapper {
    flex-wrap: wrap;
  }
  .side-nav a {
    display: inline-block;
    margin: 0 24px;
  }
  .section-collection-list {
    overflow: hidden;
  }
}

@media screen and (max-width: 768px) {
  #shopify-section-slideshow {
    flex-wrap: wrap;
  }
  #shopify-section-slideshow .vertical {
    flex-direction: row;
  }

  .slider-static-top, .slider-static-bottom {
    width: 100%;
    height: 100%;
  }

  #shopify-section-1603415794376a58ee .container::after, .product__title::after {
    right: 20px;
  }

  #shopify-section-1603415794376a58ee h2::before {
    left: -80px;
    top: -110px;
  }

  #shopify-section-16034882062fb96698 .container {
    flex-wrap: wrap;
  }

  #shopify-section-16034882062fb96698 h2 {
    display: inline-block;
  }

  #shopify-section-16034882062fb96698 .container {
    padding: 0;
  }

  #shopify-section-16034882062fb96698 .column {
    padding: 40px 60px;
  }

  .header .container {
    padding: 0 20px;
  }

  .header__logo {
    margin: 0 0 0 5px;
  }

  .header__link:not(:first-child) {
    margin-left: 10px;
  }

  .product-recommendations .container_flex {
    flex-direction: column;
  }

  .product-recommendations .column h2 {
    margin-bottom: 48px;
  }
  .container {
    padding: 0 20px;
  }

  .grid__cell {
    padding: 0;
  }
  .product__slides {
    margin: 0;
  }
  .newsletter__inner {
    width: 100%;
  }

}

@media screen and (max-width: 400px) {
  .side-nav a {
    display: block;
    margin: 0 auto;
    border-bottom: none;
    padding: 8px 0;
  }
}

/* fonts */


@font-face {
    font-family: 'Neutra Text Book';
    src: url('NeutraText-Book.eot');
    src: url('NeutraText-Book.eot?iefix') format('eot'),
         url('NeutraText-Book.woff') format('woff'),
         url('NeutraText-Book.ttf') format('truetype'),
         url('NeutraText-Book.svg#webfontZam02nTh') format('svg');
    font-weight: normal;
    font-style: normal; }


@font-face {
font-family: 'Neutra Text Bold';
src: url('NeutraText-Bold.eot');
src: url('NeutraText-Bold.eot?iefix') format('eot'),
     url('NeutraText-Bold.woff') format('woff'),
     url('NeutraText-Bold.ttf') format('truetype'),
     url('NeutraText-Bold.svg#webfontZam02nTh') format('svg');
font-weight: normal;
font-style: normal; }


@font-face {
font-family: 'Inky';
src: url('CalderockInky.eot');
src: url('CalderockInky.eot?iefix') format('eot'),
     url('CalderockInky.woff') format('woff'),
     url('CalderockInky.ttf') format('truetype'),
     url('CalderockInky.svg#webfontZam02nTh') format('svg');
font-weight: normal;
font-style: normal; }

